--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
 
     <div class="container-rodape">
-        <div class="rodape">
+        
             <div class="contatos">
                 <div class="cards-contatos">
                     <h2>Entre em contato conosco:</h2>
@@ -167,12 +167,12 @@
                 </div>
 
             </div>
-            <div>
+            <div class="copy">
                 <p>© Copyright - PousadaDev</p>
             </div>
 
 
-        </div>
+        
 
     </div>
 
